--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "cookie": "^0.5.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "formik": "^2.4.2",
     "jose": "^4.14.4",
     "next": "13.4.12",
+    "next-firebase-auth": "^1.0.0-beta.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
